<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/standby_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:visibility="visible"> <!-- set to Visible to test the UI on dev time -->

    <RelativeLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center_vertical|center_horizontal">

            <ImageView
                android:id="@+id/iv_error_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_broken_link" />

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_error_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/error_msg"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/bt_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_error"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/retry"
                android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/empty_list"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>